Merged @dido socks-client realization
Signed-off-by: Vadim A. Misbakh-Soloviov <mva@mva.name>